[gd_scene load_steps=4 format=3 uid="uid://ct8g0wwkspul2"]

[ext_resource type="Theme" uid="uid://cb08x6h45w6u" path="res://ui_theme.tres" id="1_kyfij"]
[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_netp7"]
[ext_resource type="Texture2D" uid="uid://r3u48ikupr7y" path="res://assets/заставка с обводкой.png" id="2_rt6m3"]

[node name="win_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_netp7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_rt6m3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -95.5
offset_right = 150.5
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kyfij")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_kyfij")
text = "You have escaped!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_kyfij")
text = "Score:"

[node name="score" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_kyfij")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="next_level" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next level"

[node name="quit_to_menu" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit to menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/quit_to_menu" to="." method="_on_quit_to_menu_pressed"]
